<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>wu.justa</groupId>
	<artifactId>object-tree-creator</artifactId>
	<packaging>jar</packaging>
	<version>1.6</version>
	<name>Object Tree creator</name>
	<url>https://github.com/Justin01Wu/ObjectTreeCreator/tree/master</url>
	<description>
	release notes:  
		1.3 fix some primitives issues
		1.4 support java.util.Collection
		1.5 support Class Generic
		1.6 using cglib to do proxy
	</description>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>	
	</properties>

	<dependencies>
	
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
    		<groupId>cglib</groupId>
    		<artifactId>cglib</artifactId>
    		<version>3.2.4</version>
		</dependency>		

	</dependencies>

	<build>
		<finalName>ObjectTreeCreator</finalName>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		<!--  attach source jar to it -->
		<plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-source-plugin</artifactId>
			<version>3.0.1</version>
			<executions>
			  <execution>
				<id>attach-sources</id>
				<goals>
				  <goal>jar</goal>
				</goals>
			  </execution>
			</executions>
		</plugin>


		</plugins>


	</build>

</project>
